mermaid changes